Wed May 29 00:59:10 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* strdup.c: Rename to...
	* common.c: ...this.
	* Makefile.am (asasm_SOURCES): Follow strdup.c rename.

Tue May 28 22:41:32 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* COPYING: Update FSF address.
	* src/{*.c,*h}: Likewise.  Use AsAsm as name, instead of AS.

Mon May 27 21:34:07 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* help_cop.c (HelpCop_Addr): Add isThumb parameter.  Add UNPREDICTABLE
	test.
	* help_cop.h (HelpCop_Addr): Add isThumb parameter.
	* m_coprocessor.c (dstmem): Follow HelpCop_Addr API change.
	* src/m_fpe.s (CheckFPUsageIsAllowed): Add test on Thumb mode.
	(dstmem, dstmemx): Follow HelpCop_Addr API change.
	* unittests/compare/core/fpe_literal.s: Add LDC to MVF{S|D}/MNF{S|D}
	conversion tests.

Sun May 26 22:46:52 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* macros.c (AddMacroArg): Add check on macro argument uniqueness.

Sun May 26 21:54:20 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* m_cop.c, m_cop.h: Rename to...
	* m_coprocessor.c, m_coprocessor.h: ...this.
	* m_copmem.c, m_copmem.h: Merge with m_coprocessor.c, m_coprocessor.h.
	* decode.c: Follow header file changes.
	* Makefile.am (asasm_SOURCES): Follow.

Sun May 26 21:35:06 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* help_cop.c (HelpCop_Addr): Follow Lit_RegisterFloat API change.
	* m_cpumem.c (dstmem): Follow Lit_RegisterInt API change.
	* area.h: Follow struct LITPOOL rename.
	* lit.c: Likewise.
	(LitAddrRange, oLitAddrRange): Add.
	(Lit_RegisterInt): Add address and instruction type parameters.
	(Lit_RegisterFloat): Likewise.
	* lit.h (Lit_eAddrType): Add.
	(Lit_RegisterInt, Lit_RegisterFloat): Add address and instruction type
	parameters.

	* unittests/compare/core/fpe_literal.s: Add LDC literal test case.

Sun May 26 21:25:42 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* m_cop.c (m_cdp2, m_mcr2, m_mrc2): Merge into m_cdp, m_mcr and m_mrc.